# logscript

./: .gitignore  README.md  setup.cfg  setup.py
debian/: README.Debian  README.source  changelog  control  debhelper-build-stamp  files  logscript.cron.d.ex  logscript.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python3-logscript.postinst.debhelper  python3-logscript.postrm.debhelper  python3-logscript.prerm.debhelper  python3-logscript.service  python3-logscript.substvars  rules  watch.ex
debian/python-logscript-doc/DEBIAN/: control  md5sums
debian/python3-logscript/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/python3-logscript/lib/systemd/system/: python3-logscript.service
debian/python3-logscript/usr/lib/python3/dist-packages/logscript/: __main__.py
debian/python3-logscript/usr/lib/python3/dist-packages/logscript-0.0.1.egg-info/: PKG-INFO
debian/python3-logscript/usr/share/doc/python3-logscript/: copyright
debian/source/: include-binaries
src/logscript/: __main__.py
src/logscript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
